kubernetes/backend-deployment.yaml
apiVersion: apps/v1 
kind: Deployment 
metadata: 
  name: server-deployment 
  labels: 
    app: server
spec: 
  replicas: 3
  selector: 
    matchLabels: 
      app: server
  template: 
    metadata: 
      labels: 
        app: server 
    spec: 
      containers: 
      - name: server-container 
        image: gcr.io/diesel-dominion-375713/backend:v2
        ports: 
        - containerPort: 5000
