kubernetes/frontend-deployment.yaml
apiVersion: apps/v1 
kind: Deployment 
metadata: 
  name: frontend-deployment 
  labels: 
    app: frontend
spec: 
  replicas: 3 
  selector: 
    matchLabels: 
      app: frontend 
  template: 
    metadata: 
      labels: 
        app: frontend 
    spec: 
      containers: 
      - name: frontend-container 
        image: localhost:32000/frontend:v7
        ports: 
        - containerPort: 80
