kubernetes/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service-lb
  namespace: default
spec:
  type: LoadBalancer
  selector:
    app: backend
  ports:
  - port: 8081
    targetPort: 5000
