kubernetes/frontend-service.yaml
apiVersion: v1 
kind: Service 
metadata: 
  name: frontend-service-lb
  namespace: default
spec: 
  type: LoadBalancer 
  ports: 
     port: 8091 
     targetPort: 80 
  selector: 
    app: frontend
