kubernetes/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/add-base-url: "true"
    #nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/service-upstream: "true"
spec:
  rules:
    - host: api.backend.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend-service-lb
                port:
                  number: 8081
    - host: app.frontend.com
      http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: frontend-service-lb
              port:
                number: 8091
